--- a/index.html
+++ b/index.html
@@ -17,48 +17,51 @@
   </style>
 </head>
 <body>
-  <!-- Contains  everyth ing-->
-  <div class = "main-container">
-    <!--Contains the img-->
-    <div class = "img-container">
-      <img src="images/illustration-hero.svg" alt="illustration-hero" >
+  <main>
+    <!-- Contains  everyth ing-->
+    <div class = "main-container">
+      <!--Contains the img-->
+      <div class = "img-container">
+        <img src="images/illustration-hero.svg" alt="illustration" >
+      </div>
+      <!-- Contains the information-->
+      <div>
+        <div class = "heading">
+          <h1 id = "h1">Order Summary</h1>
+        </div>
+        <div class = "paragraph">
+          <p>You can now listen to millions of 
+            songs, audiobooks, and podcasts on 
+            any device anywhere you like!
+          </p>
+        </div>
+        <div class = "annual-plan">
+          <span class = "music-icon">
+            <img src = "images/icon-music.svg" alt = "music icon" />
+          </span>
+          <span class = "details">
+            <p id = "plan">Annual Plan</p>
+            <p id = "price">$59.99/year</p>
+          </span>
+          <span class = "change">
+            <a href="#">Change</a>
+          </span>
+        </div>
+        <div class = "payment-btn">
+          <button type = "button">Proceed to Payment</button>
+        </div>
+        <div class = "cancel-btn">
+          <button type = "button">Cancel order</button>
+        </div>
+      </div>
     </div>
-    <!-- Contains the information-->
-    <div>
-      <div class = "heading">
-         <h3 id = "h3">Order Summary</h3>
-      </div>
-      <div class = "paragraph">
-        <p>You can now listen to millions of 
-          songs, audiobooks, and podcasts on 
-          any device anywhere you like!
-        </p>
-      </div>
-      <div class = "annual-plan">
-        <span class = "music-icon">
-          <img src = "images/icon-music.svg" />
-        </span>
-        <span class = "details">
-          <p id = "plan">Annual Plan</p>
-          <p id = "price">$59.99/year</p>
-        </span>
-        <span class = "change">
-          <a href="#">Change</a>
-        </span>
-      </div>
-      <div class = "payment-btn">
-        <button type = "button">Proceed to Payment</button>
-      </div>
-      <div class = "cancel-btn">
-        <button type = "button">Cancel order</button>
-      </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/GamuchiraiS">Gamuchirai</a>.
     </div>
-  </div>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/GamuchiraiS">Gamuchirai</a>.
-  </div>
+  <footer></footer>
 </body>
 <script type = "text/javascript">
 </script>
