--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://github.com/GamuchiraiS">Gamuchirai</a>.
     </div>
-  <footer></footer>
+  </footer>
 </body>
-<script type = "text/javascript">
 </script>
 </html>
